--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ googleAnalytics = "G-R6G6TM3LWM"
 #  ]
 
 [params]
-  description = " "
+  description = "Personal projects and more."
   themeColor = "theme-base-0c"
   copyright = " "
   github = "https://github.com/jarodlam/"
