Tagline and title modifications

--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://jarodl.am/"
 languageCode = "en-us"
-title = "Jarod Lam"
+title = "jarodl.am"
 theme = "hyde"
 googleAnalytics = "G-R6G6TM3LWM"
 
